ingress.yaml
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:

  name: iris-predictor-deployment-ingress

  annotations:

    kubernetes.io/ingress.class: nginx

    cert-manager.io/cluster-issuer: letsencrypt-prod

spec:

  tls:

    - secretName: iris-predictor-deployment-tls

      hosts:

        - <YOUR_DOMAIN>

  rules:

    - host: <YOUR_DOMAIN>

      http:

        paths:

          - path: /

            pathType: Prefix

            backend:

              service:

                name: iris-predictor-deployment-service

                port:

                  number: 80
